# zsh-mgr

./: .gitignore  LICENSE  README.md  example.zsh  generic-auto-updater.sh  generic-auto-updater.zsh  install-zsh-mgr.zsh  install.sh  zsh-common-variables.zsh  zsh-functions.zsh  zsh-mgr-common-functions.zsh  zsh-mgr.zsh
zsh-mgr-rs/: .gitignore  ARCHITECTURE.md  CHANGELOG.md  COMPARISON.md  Cargo.toml  DEMO.sh  IMPLEMENTACION_COMPLETA.md  MIGRACION_COMPLETA.md  Makefile  PARALLEL_UPDATE_OOP.md  PKGBUILD  QUICK_START.md  README.md  README_PARALLEL.md  SUMMARY.md  build.sh  examples_parallel.zsh  test_parallel_update.sh  test_quiet_mode.sh  zsh-integration.zsh
zsh-mgr-rs/src/: config.rs  credentials_manager.rs  git_update.rs  lib.rs  parallel-git-update.rs  updater.rs
