[package]
name = "zsh-mgr-rs"
version = "0.1.0"
edition = "2021"
authors = ["amt911"]
description = "Plugin manager for ZSH written in Rust"
license = "MIT"

# Optimizaciones para binarios de producción
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[dependencies]
# Git operations (libgit2 bindings - maduro y rápido)
git2 = "0.20.2"

# Serialización JSON para comunicación con ZSH
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Paralelización eficiente
rayon = "1.8"

# Manejo de errores ergonómico
anyhow = "1.0"

# Timestamps y filesystem
filetime = "0.2"
walkdir = "2.4"

# Logging (opcional, para debugging)
env_logger = "0.11"
log = "0.4"

# Colores en terminal
colored = "3.0.0"

# Fechas y horas
chrono = "0.4"

# Tablas en terminal
comfy-table = "7.1"

# Directorios del sistema
dirs = "5.0"

# Buscar ejecutables
which = "6.0"

# Expansión de rutas shell
shellexpand = "3.1"

# Compilar múltiples binarios desde src/bin/
[[bin]]
name = "parallel-git-update"
path = "src/parallel-git-update.rs"

[[bin]]
name = "zsh-mgr"
path = "src/bin/zsh-mgr.rs"

[package.metadata.deb]
maintainer = "amt911"
copyright = "2024, amt911"
license-file = ["LICENSE", "4"]
extended-description = """\
A modern, fast plugin manager for ZSH written in Rust.
Features parallel updates, automatic management, and clean CLI interface."""
depends = "$auto, git, zsh"
section = "shells"
priority = "optional"
assets = [
    ["target/release/zsh-mgr", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/zsh-mgr/", "644"],
]
